[lworld] runtime/exceptionMsgs/AbstractMethodError/AbstractMethodErrorTest.java fails with java.lang.IncompatibleClassChangeError: value class AME5_B cannot inherit from class AME5_A

XMLWordPrintable

      Test runtime/exceptionMsgs/AbstractMethodError/AbstractMethodErrorTest.java fails with this output:

      result: Failed. Execution failed: `main' threw exception: java.lang.IncompatibleClassChangeError: value class AME5_B cannot inherit from class AME5_A

      This happens when the test is run with -XX:-EnableValhalla

            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: