8328641: [lworld] runtime/exceptionMsgs/AbstractMethodError/AbstractMethodErrorTest.java fails with java.lang.IncompatibleClassChangeError: value class AME5_B cannot inherit from class AME5_A